--- a/MDK-ARM/ydm_mw_pwm.uvprojx
+++ b/MDK-ARM/ydm_mw_pwm.uvprojx
@@ -406,6 +406,11 @@
               <FileType>1</FileType>
               <FilePath>../Core/Src/stm32f3xx_hal_msp.c</FilePath>
             </File>
+            <File>
+              <FileName>i2c.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\i2c.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
